--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'war'
+    id 'idea' // optional (to generate IntelliJ IDEA project files)
 }
 
 group 'com.stc12'
@@ -14,6 +15,9 @@ repositories {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
     afterSuite { desc, result ->
         if (!desc.parent)
             println("${result.resultType} " +
@@ -25,8 +29,9 @@ test {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
 }
