--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ cache:
   - $HOME/.gradle/wrapper/
 
 script:
-  - ./gralew assemble
-  - ./gralew check --rerun-task
+  - ./gradlew assemble
+  - ./gradlew check --rerun-task
